--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Asabeneh Yetayeh challenges in <span>2021</span></h1>
-        <h2>30DaysOfJavaScript Challenge</h2>
+        <h1>
+            Asabeneh Yetayeh challenges in <span>2021</span>
+        </h1>
+        <h2>
+            <a href="https://www.facebook.com/kaza15092001/">30DaysOfJavaScript Challenge</a>
+        </h2>
         <div id="time">
             <span>January 22,2021 02:49:01</span>
         </div>
